Reword the drop target message
There's no "queue", only "playlist".

--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -9,7 +9,7 @@
       <object class="GtkWindowHandle">
         <child>
           <object class="DragOverlay" id="drag_overlay">
-            <property name="title" translatable="yes">Drop a song to add it to the queue</property>
+            <property name="title" translatable="yes">Drop a song to add it to the playlist</property>
             <property name="child">
 
               <object class="AdwToastOverlay" id="toast_overlay">
