--- a/src/gtk/volume-control.ui
+++ b/src/gtk/volume-control.ui
@@ -3,18 +3,26 @@
   <requires lib="gtk" version="4.0"/>
   <template class="AmberolVolumeControl" parent="GtkWidget">
     <child>
-      <object class="GtkImage" id="volume_low_image">
+      <object class="GtkButton" id="volume_low_button">
         <property name="icon-name">audio-volume-low-symbolic</property>
+        <property name="action-name">volume.toggle-mute</property>
+        <property name="valign">center</property>
+        <style>
+          <class name="flat" />
+          <class name="circular"/>
+        </style>
       </object>
     </child>
     <child>
       <object class="GtkScale" id="volume_scale">
         <property name="hexpand">true</property>
+        <property name="margin-end">6</property>
       </object>
     </child>
     <child>
       <object class="GtkImage" id="volume_high_image">
         <property name="icon-name">audio-volume-high-symbolic</property>
+        <property name="margin-end">10</property>
       </object>
     </child>
   </template>
