Blur the drop overlay background
Increase the readability of the drop overlay by blurring the contents of
the window below it.

Fixes: #288

--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -99,6 +99,10 @@ dragoverlay {
   color: @accent_fg_color;
 }
 
+.blurred {
+  filter: blur(6px);
+}
+
 scrolledwindow undershoot.top {
   box-shadow: inset 0 1px @borders;
 }
