--- a/src/gtk/playlist-view.ui
+++ b/src/gtk/playlist-view.ui
@@ -3,9 +3,8 @@
   <requires lib="gtk" version="4.0"/>
   <template class="AmberolPlaylistView" parent="GtkWidget">
     <child>
-      <object class="GtkBox" id="playlist_box">
-        <property name="orientation">vertical</property>
-        <child>
+      <object class="AdwToolbarView">
+        <child type="top">
           <object class="GtkBox">
             <child>
               <object class="GtkBox" id="queue_length_box">
@@ -81,7 +80,7 @@
             </child>
           </object>
         </child>
-        <child>
+        <child type="top">
           <object class="GtkSearchBar" id="playlist_searchbar">
             <property name="child">
               <object class="GtkSearchEntry" id="playlist_searchentry">
@@ -90,7 +89,7 @@
             </property>
           </object>
         </child>
-        <child>
+        <property name="content">
           <object class="GtkOverlay" id="playlist_overlay">
             <child type="overlay">
               <object class="GtkProgressBar" id="playlist_progress">
@@ -122,8 +121,8 @@
               </object>
             </child>
           </object>
-        </child>
-        <child>
+        </property>
+        <child type="bottom">
           <object class="GtkActionBar" id="queue_actionbar">
             <property name="revealed">false</property>
             <style>
