--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -21,14 +21,10 @@
                       <object class="GtkStackPage">
                         <property name="name">initial-view</property>
                         <property name="child">
-                          <object class="GtkBox">
-                            <property name="orientation">vertical</property>
-                            <property name="spacing">6</property>
-                            <child>
+                          <object class="AdwToolbarView">
+
+                            <child type="top">
                               <object class="GtkHeaderBar">
-                                <style>
-                                  <class name="flat"/>
-                                </style>
                                 <child type="title">
                                   <object class="GtkBox">
                                     <property name="visible">false</property>
@@ -36,7 +32,8 @@
                                 </child>
                               </object>
                             </child>
-                            <child>
+
+                            <property name="content">
                               <object class="AdwClamp">
                                 <property name="maximum-size">450</property>
                                 <property name="vexpand">true</property>
@@ -86,8 +83,8 @@
                                   </object>
                                 </property>
                               </object>
+                            </property>
 
-                            </child>
                           </object>
                         </property>
                       </object>
@@ -100,15 +97,11 @@
                             <property name="reveal-flap">true</property>
 
                             <child type="content">
-                              <object class="GtkBox">
-                                <property name="orientation">vertical</property>
+                              <object class="AdwToolbarView">
 
                                 <!-- Header Bar -->
-                                <child>
+                                <child type="top">
                                   <object class="GtkHeaderBar">
-                                    <style>
-                                      <class name="flat"/>
-                                    </style>
                                     <child type="title">
                                       <object class="GtkBox">
                                         <property name="visible">false</property>
@@ -116,7 +109,8 @@
                                     </child>
                                   </object>
                                 </child>
-                                <child>
+
+                                <property name="content">
                                   <object class="GtkBox" id="main_box">
                                     <property name="orientation">vertical</property>
                                     <property name="valign">center</property>
@@ -198,7 +192,7 @@
                                     </child>
                                   </object>
 
-                                </child>
+                                </property>
                               </object>
                             </child>
 
