--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -3,8 +3,9 @@
   <requires lib="gtk" version="4.0"/>
   <template class="AmberolWindow" parent="AdwApplicationWindow">
     <property name="handle-menubar-accel">true</property>
-    <property name="default-width">600</property>
-    <property name="resizable">true</property>
+    <property name="width-request">360</property>
+    <property name="height-request">660</property>
+    <property name="default-width">800</property>
     <property name="content">
       <object class="GtkWindowHandle">
         <child>
@@ -93,10 +94,11 @@
                       <object class="GtkStackPage">
                         <property name="name">main-view</property>
                         <property name="child">
-                          <object class="AdwFlap" id="queue_revealer">
-                            <property name="reveal-flap">true</property>
+                          <object class="AdwOverlaySplitView" id="split_view">
+                            <property name="max-sidebar-width">330</property>
+                            <property name="sidebar-width-fraction">0.4</property>
 
-                            <child type="content">
+                            <property name="content">
                               <object class="AdwToolbarView">
 
                                 <!-- Header Bar -->
@@ -131,7 +133,6 @@
                                       <object class="GtkBox">
                                         <property name="orientation">vertical</property>
                                         <property name="spacing">2</property>
-                                        <property name="margin-bottom">12</property>
                                         <property name="width-request">256</property>
                                         <child>
                                           <object class="GtkBox">
@@ -194,12 +195,12 @@
 
                                 </property>
                               </object>
-                            </child>
+                            </property>
 
                             <!-- Playlist view -->
-                            <child type="flap">
+                            <property name="sidebar">
                               <object class="AmberolPlaylistView" id="playlist_view"/>
-                            </child>
+                            </property>
                           </object>
                         </property>
                       </object>
@@ -213,5 +214,11 @@
         </child>
       </object>
     </property>
+    <child>
+      <object class="AdwBreakpoint">
+        <condition>max-width: 560sp</condition>
+        <setter object="split_view" property="collapsed">True</setter>
+      </object>
+    </child>
   </template>
 </interface>
