window: Port to AdwHeaderBar
This has the benefits of both automatically position the window control
buttons and hide the title with a simple property instead of setting an
invisible child title widget.

--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -25,12 +25,8 @@
                           <object class="AdwToolbarView">
 
                             <child type="top">
-                              <object class="GtkHeaderBar">
-                                <child type="title">
-                                  <object class="GtkBox">
-                                    <property name="visible">false</property>
-                                  </object>
-                                </child>
+                              <object class="AdwHeaderBar">
+                                <property name="show-title">false</property>
                               </object>
                             </child>
 
@@ -103,12 +99,8 @@
 
                                 <!-- Header Bar -->
                                 <child type="top">
-                                  <object class="GtkHeaderBar">
-                                    <child type="title">
-                                      <object class="GtkBox">
-                                        <property name="visible">false</property>
-                                      </object>
-                                    </child>
+                                  <object class="AdwHeaderBar">
+                                    <property name="show-title">false</property>
                                   </object>
                                 </child>
 
