--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -101,6 +101,7 @@ dragoverlay {
 .drag-overlay-status-page {
   background-color: alpha(@accent_bg_color, 0.5);
   color: @accent_fg_color;
+  padding: 32px;
 }
 
 .blurred {
